--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8090
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.10.5:3306/OPENBANK
+spring.datasource.url=jdbc:mariadb://192.168.0.99:3306/OPENBANK
 spring.datasource.username=root
 spring.datasource.password=mypassword!@
 
@@ -9,4 +9,4 @@ url.nhApi = https://developers.nonghyup.com/
 
 # spring setting
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
